--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
   ],
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf lib && babel src -d lib",
+    "lint": "eslint src test *.js",
+    "prepublish": "npm run build",
+    "tdd": "cross-env NODE_ENV=test karma start",
+    "test": "npm run lint && npm run testonly",
+    "testonly": "npm run tdd -- --single-run"
   },
   "repository": {
     "type": "git",
@@ -21,5 +26,41 @@
   "bugs": {
     "url": "https://github.com/4Catalyzer/farce/issues"
   },
-  "homepage": "https://github.com/4Catalyzer/farce#readme"
+  "homepage": "https://github.com/4Catalyzer/farce#readme",
+  "dependencies": {
+    "dom-helpers": "^2.4.0",
+    "invariant": "^2.2.1",
+    "query-string": "^4.2.3",
+    "redux": "^3.6.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-dev-expression": "^0.2.1",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-latest": "^6.14.0",
+    "babel-preset-stage-1": "^6.13.0",
+    "chai": "^3.5.0",
+    "cross-env": "^2.0.1",
+    "dirty-chai": "^1.2.2",
+    "eslint": "^3.4.0",
+    "eslint-config-airbnb-base": "^5.0.3",
+    "eslint-plugin-import": "^1.14.0",
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.1.1",
+    "karma-mocha-reporter": "^2.1.0",
+    "karma-sinon-chai": "^1.2.3",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
+    "mocha": "^3.0.2",
+    "rimraf": "^2.5.4",
+    "sinon": "^1.17.5",
+    "sinon-chai": "^2.8.0",
+    "webpack": "^1.13.2"
+  }
 }
