--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -2,6 +2,9 @@
   "env": {
     "mocha": true
   },
+  "globals": {
+    "expect": false
+  },
   "rules": {
     "import/no-extraneous-dependencies": [2, {
       "devDependencies": true
