Clean up library implementation
- Mirror location middlewares for proper commutativity
- Expose methods for createHref and createLocation
- Rename LOCATION_UPDATED to UPDATE_LOCATION
- Use explicit middlewares array in createHistoryEnhancer
- Add default getLocation to createStoreHistory

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "rimraf lib && babel src -d lib",
-    "lint": "eslint src test *.js",
+    "lint": "eslint examples/*/src src test *.js",
     "prepublish": "npm run build",
     "tdd": "cross-env NODE_ENV=test karma start",
     "test": "npm run lint && npm run testonly",
