--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "dom-helpers": "^3.0.0",
     "invariant": "^2.2.1",
+    "is-promise": "^2.1.0",
     "query-string": "^4.2.3",
     "redux": "^3.6.0"
   },
