--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -6,7 +6,7 @@
     "expect": false
   },
   "rules": {
-    "import/no-extraneous-dependencies": [2, {
+    "import/no-extraneous-dependencies": ["error", {
       "devDependencies": true
     }]
   }
