--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -3,7 +3,8 @@
     "mocha": true
   },
   "globals": {
-    "expect": false
+    "expect": false,
+    "sinon": false
   },
   "rules": {
     "import/no-extraneous-dependencies": ["error", {
