--- a/package.json
+++ b/package.json
@@ -31,37 +31,37 @@
     "dom-helpers": "^3.2.1",
     "invariant": "^2.2.2",
     "is-promise": "^2.1.0",
-    "query-string": "^4.3.2",
-    "redux": "^3.6.0"
+    "query-string": "^5.0.0",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.1",
-    "babel-loader": "^6.4.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dev-expression": "^0.2.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-latest": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-stage-1": "^6.24.1",
-    "chai": "^3.5.0",
-    "cross-env": "^4.0.0",
-    "dirty-chai": "^1.2.2",
-    "eslint": "^3.19.0",
-    "eslint-config-4catalyzer": "^0.2.0",
-    "eslint-plugin-import": "^2.2.0",
-    "karma": "^1.6.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "chai": "^4.1.2",
+    "cross-env": "^5.1.0",
+    "dirty-chai": "^2.0.1",
+    "eslint": "^4.9.0",
+    "eslint-config-4catalyzer": "^0.3.3",
+    "eslint-plugin-import": "^2.8.0",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.3",
-    "karma-sinon-chai": "^1.3.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sinon-chai": "^1.3.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
-    "mocha": "^3.2.0",
-    "rimraf": "^2.6.1",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.9.0",
-    "webpack": "^1.13.3"
+    "karma-webpack": "^2.0.5",
+    "mocha": "^4.0.1",
+    "rimraf": "^2.6.2",
+    "sinon": "^2.4.1",
+    "sinon-chai": "^2.14.0",
+    "webpack": "^3.8.1"
   }
 }
