--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dev-expression": "^0.2.1",
+    "babel-plugin-istanbul": "^4.1.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-1": "^6.24.1",
     "chai": "^4.1.2",
+    "codecov": "^3.0.0",
     "cross-env": "^5.1.0",
     "dirty-chai": "^2.0.1",
     "eslint": "^4.9.0",
@@ -52,6 +54,7 @@
     "eslint-plugin-import": "^2.8.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
