--- a/package.json
+++ b/package.json
@@ -8,11 +8,24 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "rimraf lib && babel src -d lib",
+    "format": "prettier --write '{examples/*/src,src,test}/**/*.js' *.js",
     "lint": "eslint examples/*/src src test *.js",
     "prepublish": "npm run build",
     "tdd": "cross-env NODE_ENV=test karma start",
     "test": "npm run lint && npm run testonly",
     "testonly": "npm run tdd -- --single-run"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "eslint",
+      "git add"
+    ]
+  },
+  "prettier": {
+    "printWidth": 79,
+    "singleQuote": true,
+    "trailingComma": "all"
   },
   "repository": {
     "type": "git",
@@ -28,10 +41,10 @@
   },
   "homepage": "https://github.com/4Catalyzer/farce#readme",
   "dependencies": {
-    "dom-helpers": "^3.2.1",
+    "dom-helpers": "^3.3.1",
     "invariant": "^2.2.2",
     "is-promise": "^2.1.0",
-    "query-string": "^5.0.0",
+    "query-string": "^5.0.1",
     "redux": "^3.7.2"
   },
   "devDependencies": {
@@ -47,24 +60,28 @@
     "babel-preset-stage-1": "^6.24.1",
     "chai": "^4.1.2",
     "codecov": "^3.0.0",
-    "cross-env": "^5.1.0",
+    "cross-env": "^5.1.3",
     "dirty-chai": "^2.0.1",
-    "eslint": "^4.9.0",
+    "eslint": "^4.13.1",
     "eslint-config-4catalyzer": "^0.3.3",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.8.0",
-    "karma": "^1.7.1",
+    "husky": "^0.14.3",
+    "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
-    "karma-firefox-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-sinon-chai": "^1.3.2",
+    "karma-sinon-chai": "^1.3.3",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.5",
+    "karma-webpack": "^2.0.9",
+    "lint-staged": "^6.0.0",
     "mocha": "^4.0.1",
+    "prettier": "^1.9.2",
     "rimraf": "^2.6.2",
-    "sinon": "^2.4.1",
+    "sinon": "^4.1.3",
     "sinon-chai": "^2.14.0",
-    "webpack": "^3.8.1"
+    "webpack": "^3.10.0"
   }
 }
