Use eslint-plugin-prettier

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,13 @@
     "4catalyzer",
     "prettier"
   ],
+  "plugins": [
+    "prettier"
+  ],
   "env": {
     "browser": true
+  },
+  "rules": {
+    "prettier/prettier": "error"
   }
 }
