--- a/examples/playground/package.json
+++ b/examples/playground/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "1.1.4"
   },
   "dependencies": {
-    "farce": "../..",
-    "redux": "^3.6.0"
+    "farce": "^0.2.5",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start"
