--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "chai": "^4.2.0",
     "codecov": "^3.6.5",
     "cross-env": "^7.0.2",
+    "delay": "^4.3.0",
     "dirty-chai": "^2.0.1",
     "eslint": "^6.8.0",
     "eslint-config-4catalyzer": "^1.1.1",
@@ -76,6 +77,7 @@
     "karma-webpack": "^4.0.2",
     "lint-staged": "^10.0.8",
     "mocha": "^7.1.1",
+    "p-defer": "^3.0.0",
     "prettier": "^2.0.1",
     "sinon": "^9.0.1",
     "sinon-chai": "^3.5.0",
