--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "files": [
     "lib"
   ],
-  "main": "lib/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "scripts": {
-    "build": "rimraf lib && yarn build:cjs && yarn build:esm && yarn build:pick",
+    "build": "rimraf lib && npm run build:cjs && npm run build:esm && npm run build:pick",
     "build:cjs": "babel src -d lib/cjs",
     "build:esm": "babel src -d lib/esm --env-name esm",
     "build:pick": "cherry-pick ../src --cjs-dir=cjs --esm-dir=esm --cwd=lib",
