--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "build:cjs": "babel -d lib/cjs src",
     "build:esm": "babel --env-name esm -d lib/esm src",
     "build:pick": "cherry-pick --cjs-dir cjs --esm-dir esm --cwd lib ../src",
-    "lint": "eslint examples/*/src src test *.js",
+    "format": "eslint --fix . && npm run prettier -- --write",
+    "lint": "eslint . && npm run prettier -- -l",
     "prepublish": "npm run build",
+    "prettier": "prettier --ignore-path .eslintignore '**/*.md'",
     "release": "rollout",
     "tdd": "cross-env NODE_ENV=test karma start",
     "test": "npm run lint && npm run testonly",
