--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "files": [
     "lib"
   ],
-  "main": "lib/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "scripts": {
-    "build": "rimraf lib && yarn build:cjs && yarn build:esm && yarn build:pick",
-    "build:cjs": "babel src -d lib/cjs",
-    "build:esm": "babel src -d lib/esm --env-name esm",
-    "build:pick": "cherry-pick ../src --cjs-dir=cjs --esm-dir=esm --cwd=lib",
-    "lint": "eslint examples/*/src src test *.js",
+    "build": "rimraf lib && npm run build:cjs && npm run build:esm && npm run build:pick",
+    "build:cjs": "babel -d lib/cjs src",
+    "build:esm": "babel --env-name esm -d lib/esm src",
+    "build:pick": "cherry-pick --cjs-dir cjs --esm-dir esm --cwd lib ../src",
+    "format": "eslint --fix . && npm run prettier -- --write",
+    "lint": "eslint . && npm run prettier -- -l",
     "prepublish": "npm run build",
+    "prettier": "prettier --ignore-path .eslintignore '**/*.md'",
     "release": "rollout",
     "tdd": "cross-env NODE_ENV=test karma start",
     "test": "npm run lint && npm run testonly",
