--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "mocha": "^8.0.1",
     "p-defer": "^3.0.0",
     "prettier": "^2.0.5",
+    "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0",
