--- a/package.json
+++ b/package.json
@@ -2,23 +2,35 @@
   "name": "farce",
   "version": "0.4.1",
   "description": "History repeats itself",
+  "keywords": [
+    "history"
+  ],
+  "homepage": "https://github.com/4Catalyzer/farce#readme",
+  "bugs": {
+    "url": "https://github.com/4Catalyzer/farce/issues"
+  },
+  "license": "MIT",
+  "author": "4Catalyzer",
   "files": [
     "lib"
   ],
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
+  "types": "lib/esm/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/4Catalyzer/farce.git"
+  },
   "scripts": {
-    "build": "rimraf lib && npm run build:cjs && npm run build:esm && npm run build:pick",
-    "build:cjs": "babel -d lib/cjs src",
-    "build:esm": "babel --env-name esm -d lib/esm src",
+    "build": "rimraf lib && 4c build src && npm run build:pick",
     "build:pick": "cherry-pick --cjs-dir cjs --esm-dir esm --cwd lib ../src",
-    "format": "eslint --fix . && npm run prettier -- --write",
-    "lint": "eslint . && npm run prettier -- -l",
+    "format": "4c format --prettier-ignore .eslintignore .",
+    "lint": "4c lint --prettier-ignore .eslintignore .",
     "prepublish": "npm run build",
-    "prettier": "prettier --ignore-path .eslintignore '**/*.md'",
     "release": "rollout",
     "tdd": "cross-env NODE_ENV=test karma start",
-    "test": "npm run lint && npm run testonly",
+    "test": "npm run lint && npm run test:ts && npm run testonly",
+    "test:ts": "dtslint types",
     "testonly": "npm run tdd -- --single-run"
   },
   "husky": {
@@ -27,31 +39,10 @@
     }
   },
   "lint-staged": {
-    "*.js": "eslint --fix",
-    "*.md": "prettier --write",
+    "*": "yarn 4c lint --fix --prettier-ignore .eslintignore",
     "README.md": "doctoc"
   },
-  "prettier": {
-    "printWidth": 79,
-    "singleQuote": true,
-    "trailingComma": "all"
-  },
-  "publishConfig": {
-    "directory": "lib"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/4Catalyzer/farce.git"
-  },
-  "keywords": [
-    "history"
-  ],
-  "author": "4Catalyzer",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/4Catalyzer/farce/issues"
-  },
-  "homepage": "https://github.com/4Catalyzer/farce#readme",
+  "prettier": "@4c/prettier-config",
   "dependencies": {
     "invariant": "^2.2.4",
     "is-promise": "^4.0.0",
@@ -61,10 +52,11 @@
   },
   "devDependencies": {
     "@4c/babel-preset": "^7.3.6",
-    "@4c/rollout": "^2.1.10",
-    "@babel/cli": "^7.10.5",
+    "@4c/cli": "^2.1.11",
+    "@4c/prettier-config": "^1.1.0",
     "@babel/core": "^7.10.5",
-    "@babel/polyfill": "^7.10.4",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-istanbul": "^6.0.0",
@@ -75,13 +67,14 @@
     "delay": "^4.4.0",
     "dirty-chai": "^2.0.1",
     "doctoc": "^1.4.0",
-    "eslint": "^7.5.0",
+    "dtslint": "^3.6.14",
     "eslint-config-4catalyzer": "^1.1.2",
+    "eslint-config-4catalyzer-typescript": "^2.0.2",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
-    "karma": "^5.1.0",
+    "karma": "^5.1.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-firefox-launcher": "^1.3.0",
@@ -94,9 +87,13 @@
     "mocha": "^8.0.1",
     "p-defer": "^3.0.0",
     "prettier": "^2.0.5",
+    "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0",
-    "webpack": "^4.44.0"
+    "webpack": "^4.44.1"
+  },
+  "publishConfig": {
+    "directory": "lib"
   }
 }
