--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
   ],
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
-  "types": "lib/esm/index.d.ts",
+  "types": "lib/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/4Catalyzer/farce.git"
   },
   "scripts": {
-    "build": "rimraf lib && 4c build src && npm run build:pick",
+    "build": "rimraf lib && 4c build --types false src && npm run build:pick && npm run build:types",
     "build:pick": "cherry-pick --cjs-dir cjs --esm-dir esm --cwd lib ../src",
+    "build:types": "cpy types/*.d.ts lib",
     "format": "4c format --prettier-ignore .eslintignore .",
     "lint": "4c lint --prettier-ignore .eslintignore .",
     "prepublish": "npm run build",
-    "release": "rollout",
+    "release": "4c rollout",
     "tdd": "cross-env NODE_ENV=test karma start",
     "test": "npm run lint && npm run test:ts && npm run testonly",
     "test:ts": "dtslint types",
@@ -63,6 +64,7 @@
     "chai": "^4.2.0",
     "cherry-pick": "^0.5.0",
     "codecov": "^3.7.2",
+    "cpy-cli": "^3.1.1",
     "cross-env": "^7.0.2",
     "delay": "^4.4.0",
     "dirty-chai": "^2.0.1",
