--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,23 @@ jobs:
       matrix:
         browser: ['ChromeCi', 'Firefox']
         node-version: [16.x]
+
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Setup xvfb
+        run: |
+          sudo apt-get install xvfb
+          Xvfb $DISPLAY -screen 0 1024x768x24 > /dev/null 2>&1 &
+      - name: Setup firefox
+        if: ${{ matrix.browser == 'Firefox' }}
+        uses: browser-actions/setup-firefox@latest
+        with:
+          firefox-version: 'latest'
+
       - run: yarn install --frozen-lockfile
       - env:
           BROWSER: ${{ matrix.browser }}
