--- a/package.json
+++ b/package.json
@@ -45,11 +45,8 @@
   },
   "prettier": "@4c/prettier-config",
   "dependencies": {
-    "invariant": "^2.2.4",
-    "is-promise": "^4.0.0",
     "query-string": "^5.1.1",
-    "redux": "^4.1.2",
-    "warning": "^4.0.3"
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@4c/babel-preset": "^9.1.0",
@@ -89,6 +86,7 @@
     "mocha": "^9.1.3",
     "p-defer": "^3.0.0",
     "prettier": "^2.5.1",
+    "puppeteer": "^13.0.1",
     "rimraf": "^3.0.2",
     "sinon": "^11.1.2",
     "sinon-chai": "^3.7.0",
